--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Django==2.2.24
-environs==5.2.1
 dj-database-url==0.5.0
+Django==2.2.24                 
+django-phonenumber-field==6.0.0
+environs==5.2.1                              
+phonenumbers==8.12.18                    
+python-dotenv==0.21.0
+ 
